# alphatest

./: .gitignore  LICENSE  README.md  pyproject.toml
data/benchmarks/: download_benchmarks.py  yfinance.ipynb
data/binance_futures/: download_ohlcv.py
data/binance_spot/: download_ohlcv.py
data/power/: process.ipynb
data/schwab/: download_schwab.py
examples/: mean_reversion.ipynb  mean_reversion.py
src/: alphatest.py  util.py
src/alphatest/: __init__.py  alphatest.py  util.py
